Fix vertical alignment of checkbox, radio, and switch components

--- a/src/components/_checkbox.scss
+++ b/src/components/_checkbox.scss
@@ -8,6 +8,7 @@ $eve-checkbox-mark-border-width: .125rem;
     height: $eve-checkbox-size;
     justify-content: center;
     position: relative;
+    vertical-align: top;
     width: $eve-checkbox-size;
 
     input {
