--- a/src/components/_radio.scss
+++ b/src/components/_radio.scss
@@ -7,6 +7,7 @@ $eve-radio-size: 1.125rem;
     height: $eve-radio-size;
     justify-content: center;
     position: relative;
+    vertical-align: top;
     width: $eve-radio-size;
 
     input {
