--- a/src/components/_switch.scss
+++ b/src/components/_switch.scss
@@ -8,6 +8,7 @@ $eve-switch-height: 1.125rem;
     height: $eve-switch-height;
     justify-content: center;
     position: relative;
+    vertical-align: top;
     width: $eve-switch-width;
 
     input {
